--- a/config/sync/field.storage.paragraph.file.yml
+++ b/config/sync/field.storage.paragraph.file.yml
@@ -1,12 +1,12 @@
-uuid: 9c650435-0170-44ec-8e5c-21a2f2e1bf78
+uuid: 51a73557-a87d-4ede-98fa-b8f09b2c70ea
 langcode: en
 status: true
 dependencies:
   module:
     - file
     - paragraphs
-id: paragraph.field_paragraph_file
-field_name: field_paragraph_file
+id: paragraph.file
+field_name: file
 entity_type: paragraph
 type: file
 settings:
