--- a/config/sync/core.entity_view_display.node.vih_short_course.default.yml
+++ b/config/sync/core.entity_view_display.node.vih_short_course.default.yml
@@ -116,9 +116,9 @@ content:
     weight: 2
     label: hidden
     settings:
-      thousand_separator: ''
+      thousand_separator: .
       decimal_separator: ','
-      scale: 2
+      scale: 0
       prefix_suffix: true
     third_party_settings: {  }
     type: number_decimal
