--- a/config/sync/core.entity_view_display.node.vih_event_order.default.yml
+++ b/config/sync/core.entity_view_display.node.vih_event_order.default.yml
@@ -41,19 +41,19 @@ content:
   field_vih_eo_persons:
     type: entity_reference_revisions_entity_view
     weight: 2
-    label: above
+    label: hidden
     settings:
-      view_mode: default
+      view_mode: embedded
       link: ''
     third_party_settings: {  }
     region: content
   field_vih_eo_price:
     weight: 3
-    label: above
+    label: inline
     settings:
-      thousand_separator: ''
-      decimal_separator: .
-      scale: 2
+      thousand_separator: .
+      decimal_separator: ','
+      scale: 0
       prefix_suffix: true
     third_party_settings: {  }
     type: number_decimal
