--- a/config/sync/core.entity_view_display.node.vih_event_order.teaser.yml
+++ b/config/sync/core.entity_view_display.node.vih_event_order.teaser.yml
@@ -10,18 +10,49 @@ dependencies:
     - field.field.node.vih_event_order.field_vih_eo_status
     - node.type.vih_event_order
   module:
+    - entity_reference_revisions
+    - panelizer
     - user
+third_party_settings:
+  panelizer:
+    enable: false
+    custom: false
+    allow: false
+    default: default
 id: node.vih_event_order.teaser
 targetEntityType: node
 bundle: vih_event_order
 mode: teaser
 content:
-  links:
-    weight: 100
+  field_vih_eo_event:
+    type: entity_reference_label
+    weight: 1
     region: content
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+  field_vih_eo_persons:
+    type: entity_reference_revisions_entity_view
+    weight: 0
+    region: content
+    label: hidden
+    settings:
+      view_mode: embedded
+      link: ''
+    third_party_settings: {  }
+  field_vih_eo_price:
+    type: number_decimal
+    weight: 2
+    region: content
+    label: hidden
+    settings:
+      thousand_separator: .
+      decimal_separator: ','
+      scale: 0
+      prefix_suffix: true
+    third_party_settings: {  }
 hidden:
-  field_vih_eo_event: true
-  field_vih_eo_persons: true
-  field_vih_eo_price: true
   field_vih_eo_status: true
   langcode: true
+  links: true
