--- a/docroot/themes/custom/site/src/compile-settings.json
+++ b/docroot/themes/custom/site/src/compile-settings.json
@@ -9,9 +9,8 @@
     "node_modules/bootstrap-sass/assets/javascripts/bootstrap/tooltip.js",
     "node_modules/bootstrap-sass/assets/javascripts/bootstrap/popover.js",
     "node_modules/bootstrap-sass/assets/javascripts/bootstrap/modal.js",
+    "node_modules/js-cookie/src/js.cookie.js",
     "src/javascripts/layout.js",
-    "src/javascripts/jquery.cookie.js",
-    "src/javascripts/modal-popup.js",
     "src/javascripts/app.js"
   ],
   "styles": [
