--- a/config/sync/node.type.vih_long_cource.yml
+++ b/config/sync/node.type.vih_long_cource.yml
@@ -9,7 +9,7 @@ third_party_settings:
     available_menus:
       - main
     parent: 'main:'
-name: 'Long Cource'
+name: 'Langt kursus'
 type: vih_long_cource
 description: ''
 help: ''
