--- a/config/sync/core.entity_view_display.paragraph.vih_ordered_course_period.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.vih_ordered_course_period.default.yml
@@ -26,7 +26,7 @@ content:
     weight: 1
     label: above
     settings:
-      view_mode: default
+      view_mode: embedded
       link: ''
     third_party_settings: {  }
     region: content
