--- a/config/sync/field.field.paragraph.long_course_list_.field_course_id.yml
+++ b/config/sync/field.field.paragraph.long_course_list_.field_course_id.yml
@@ -11,7 +11,7 @@ field_name: field_course_id
 entity_type: paragraph
 bundle: long_course_list_
 label: Kurser
-description: ''
+description: 'Vælg de kurser som du ønsker vist. Vælges ingen, vises de 3 seneste fremtidige kurser.'
 required: false
 translatable: true
 default_value: {  }
