--- a/config/sync/node.type.landing_page.yml
+++ b/config/sync/node.type.landing_page.yml
@@ -20,10 +20,10 @@ third_party_settings:
     default_moderation_state: draft
 _core:
   default_config_hash: 8VcI2-CMOkZ6QX3l8mhgANnKNJVWkTkG4h-_oMuaHLA
-name: 'Landing Page'
+name: Landingsside
 type: landing_page
 description: 'A special page with its own one-off layout and content.'
 help: ''
-new_revision: true
+new_revision: false
 preview_mode: 0
 display_submitted: false
