--- a/config/sync/node.type.vih_course_period.yml
+++ b/config/sync/node.type.vih_course_period.yml
@@ -9,7 +9,7 @@ third_party_settings:
     available_menus:
       - main
     parent: 'main:'
-name: 'Course Period'
+name: 'Kursus periode'
 type: vih_course_period
 description: ''
 help: ''
