--- a/config/sync/node.type.vih_event_order.yml
+++ b/config/sync/node.type.vih_event_order.yml
@@ -9,7 +9,7 @@ third_party_settings:
     available_menus:
       - main
     parent: 'main:'
-name: 'Event Order'
+name: 'Event - bestilling'
 type: vih_event_order
 description: ''
 help: ''
