--- a/config/sync/node.type.vih_long_course_order.yml
+++ b/config/sync/node.type.vih_long_course_order.yml
@@ -9,7 +9,7 @@ third_party_settings:
     available_menus:
       - main
     parent: 'main:'
-name: 'Long Course Order'
+name: 'Langt kursus - bestilling'
 type: vih_long_course_order
 description: ''
 help: ''
