--- a/config/sync/views.view.events.yml
+++ b/config/sync/views.view.events.yml
@@ -1,4 +1,4 @@
-uuid: 5c19634d-0a7b-4e99-8673-9f861b9d8f3a
+uuid: 5e2a2b8e-1fab-49c8-8383-bcd72baf2e1a
 langcode: da
 status: true
 dependencies:
@@ -9,16 +9,17 @@ dependencies:
     - field.storage.node.field_vih_course_image
     - field.storage.node.field_vih_course_periods
     - field.storage.node.field_vih_cp_start_date
+    - field.storage.node.field_vih_sc_image
     - image.style.nyhedsformat
-    - node.type.vih_long_cource
+    - node.type.event
   module:
     - datetime
     - image
     - node
     - text
     - user
-id: long_courses
-label: 'Lange kurser'
+id: events
+label: Events
 module: views
 description: ''
 tag: ''
@@ -273,10 +274,74 @@ display:
           group_type: group
           admin_label: ''
           label: ''
-          exclude: false
+          exclude: true
           alter:
             alter_text: true
             text: "<div class=\"image-with-overlay\">\n<div class=\"image-overlay\">{{ field_vih_course_periods }}</div>\n{{ field_vih_course_image }}\n</div>"
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: target_id
+          type: image
+          settings:
+            image_style: nyhedsformat
+            image_link: ''
+          group_column: ''
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
+        field_vih_sc_image:
+          id: field_vih_sc_image
+          table: node__field_vih_sc_image
+          field: field_vih_sc_image
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: true
+            text: "<div class=\"image-with-overlay\">\n<div class=\"image-overlay\">{{ field_vih_course_periods }}</div>\n{{ field_vih_sc_image }}\n</div>"
             make_link: false
             path: ''
             absolute: false
@@ -405,7 +470,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: "\n<div class=\"news-info\">\n<span class=\"fpnews-title\">\n{{ title }} </span>\n<span class=\"fpnews-content\">{{ body }}</span>\n\n</div>"
+            text: "<div class=\"news-info\">\n<span class=\"fpnews-title\">\n{{ title }} </span>\n<span class=\"fpnews-content\">{{ body }}</span>\n\n</div>"
             make_link: false
             path: ''
             absolute: false
@@ -443,9 +508,9 @@ display:
           empty_zero: false
           hide_alter_empty: true
           click_sort_column: value
-          type: text_summary_or_trimmed
+          type: text_trimmed
           settings:
-            trim_length: 280
+            trim_length: 265
           group_column: value
           group_columns: {  }
           group_rows: true
@@ -529,7 +594,7 @@ display:
           admin_label: ''
           operator: in
           value:
-            vih_long_cource: vih_long_cource
+            event: event
           group: 1
           exposed: false
           expose:
@@ -545,6 +610,7 @@ display:
             remember_roles:
               authenticated: authenticated
             reduce: false
+            argument: null
           is_grouped: false
           group_info:
             label: ''
@@ -583,7 +649,7 @@ display:
       arguments: {  }
       display_extenders: {  }
       css_class: ''
-      title: Langekurser
+      title: ''
     cache_metadata:
       max-age: -1
       contexts:
@@ -597,6 +663,7 @@ display:
         - 'config:field.storage.node.field_vih_course_image'
         - 'config:field.storage.node.field_vih_course_periods'
         - 'config:field.storage.node.field_vih_cp_start_date'
+        - 'config:field.storage.node.field_vih_sc_image'
   embed_list_advanced:
     display_plugin: embed
     id: embed_list_advanced
@@ -604,12 +671,16 @@ display:
     position: 2
     display_options:
       display_extenders: {  }
+      display_description: ''
       title: ''
       defaults:
         title: false
-        arguments: false
         pager: false
-      display_description: ''
+        arguments: false
+      pager:
+        type: none
+        options:
+          offset: 0
       arguments:
         nid:
           id: nid
@@ -643,15 +714,11 @@ display:
             type: none
             fail: 'not found'
           validate_options: {  }
-          break_phrase: false
+          break_phrase: true
           not: false
           entity_type: node
           entity_field: nid
           plugin_id: node_nid
-      pager:
-        type: none
-        options:
-          offset: 0
     cache_metadata:
       max-age: -1
       contexts:
@@ -666,6 +733,7 @@ display:
         - 'config:field.storage.node.field_vih_course_image'
         - 'config:field.storage.node.field_vih_course_periods'
         - 'config:field.storage.node.field_vih_cp_start_date'
+        - 'config:field.storage.node.field_vih_sc_image'
   embed_list_advanced_future:
     display_plugin: embed
     id: embed_list_advanced_future
@@ -673,13 +741,19 @@ display:
     position: 2
     display_options:
       display_extenders: {  }
+      display_description: ''
       title: ''
       defaults:
         title: false
+        pager: false
         arguments: false
         filters: false
         filter_groups: false
-      display_description: ''
+      pager:
+        type: some
+        options:
+          items_per_page: 3
+          offset: 0
       arguments: {  }
       filters:
         status:
@@ -702,7 +776,7 @@ display:
           admin_label: ''
           operator: in
           value:
-            vih_long_cource: vih_long_cource
+            event: event
           group: 1
           exposed: false
           expose:
@@ -718,6 +792,7 @@ display:
             remember_roles:
               authenticated: authenticated
             reduce: false
+            argument: null
           is_grouped: false
           group_info:
             label: ''
@@ -733,6 +808,46 @@ display:
           entity_type: node
           entity_field: type
           plugin_id: bundle
+        field_event_start_date_value:
+          id: field_event_start_date_value
+          table: node__field_event_start_date
+          field: field_event_start_date_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: '>='
+          value:
+            min: ''
+            max: ''
+            value: now
+            type: offset
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          plugin_id: datetime
       filter_groups:
         operator: AND
         groups:
@@ -750,3 +865,4 @@ display:
         - 'config:field.storage.node.field_vih_course_image'
         - 'config:field.storage.node.field_vih_course_periods'
         - 'config:field.storage.node.field_vih_cp_start_date'
+        - 'config:field.storage.node.field_vih_sc_image'
