--- a/config/sync/core.entity_view_display.node.vih_course_period.default.yml
+++ b/config/sync/core.entity_view_display.node.vih_course_period.default.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.node.vih_course_period.field_vih_cp_course_slots
     - field.field.node.vih_course_period.field_vih_cp_end_date
     - field.field.node.vih_course_period.field_vih_cp_start_date
+    - field.field.node.vih_course_period.scheduled_update
     - node.type.vih_course_period
   module:
     - datetime
@@ -64,5 +65,13 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
+  scheduled_update:
+    weight: 106
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
 hidden:
   langcode: true
