--- a/config/sync/node.type.vih_short_course.yml
+++ b/config/sync/node.type.vih_short_course.yml
@@ -22,6 +22,6 @@ name: 'Kort kursus'
 type: vih_short_course
 description: ''
 help: ''
-new_revision: true
-preview_mode: 1
+new_revision: false
+preview_mode: 0
 display_submitted: false
