--- a/config/sync/core.entity_view_display.node.news.default.yml
+++ b/config/sync/core.entity_view_display.node.news.default.yml
@@ -8,6 +8,7 @@ dependencies:
     - field.field.node.news.field_news_paragraph
     - field.field.node.news.field_news_tags
     - field.field.node.news.field_page_main_image
+    - field.field.node.news.scheduled_update
     - node.type.news
   module:
     - entity_reference_revisions
@@ -64,6 +65,14 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
+  scheduled_update:
+    weight: 5
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
 hidden:
   field_page_main_image: true
   langcode: true
