--- a/config/sync/core.entity_view_display.node.vih_long_cource.default.yml
+++ b/config/sync/core.entity_view_display.node.vih_long_cource.default.yml
@@ -15,6 +15,7 @@ dependencies:
     - field.field.node.vih_long_cource.field_vih_course_subheading
     - field.field.node.vih_long_cource.field_vih_course_subsc_price
     - field.field.node.vih_long_cource.field_vih_course_week_price
+    - field.field.node.vih_long_cource.scheduled_update
     - node.type.vih_long_cource
   module:
     - entity_reference_revisions
@@ -323,6 +324,14 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
+  scheduled_update:
+    weight: 11
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
 hidden:
   field_vih_course_periods: true
   field_vih_course_persons_limit: true
