--- a/config/sync/field.field.node.landing_page.scheduled_update.yml
+++ b/config/sync/field.field.node.landing_page.scheduled_update.yml
@@ -1,16 +1,16 @@
-uuid: 40b8cb14-a9c9-4e4f-a86d-921c9f132b20
-langcode: en
+uuid: 4b42cfcb-a56b-4eda-81c6-9d79693f059e
+langcode: da
 status: true
 dependencies:
   config:
     - field.storage.node.scheduled_update
-    - node.type.vih_short_course
+    - node.type.landing_page
     - scheduled_updates.scheduled_update_type.content_publish_unpublish
     - scheduled_updates.scheduled_update_type.node_embargo
-id: node.vih_short_course.scheduled_update
+id: node.landing_page.scheduled_update
 field_name: scheduled_update
 entity_type: node
-bundle: vih_short_course
+bundle: landing_page
 label: 'Skemalagt opdatering'
 description: ''
 required: false
