--- a/config/sync/field.field.node.news.scheduled_update.yml
+++ b/config/sync/field.field.node.news.scheduled_update.yml
@@ -1,16 +1,16 @@
-uuid: 40b8cb14-a9c9-4e4f-a86d-921c9f132b20
-langcode: en
+uuid: 834eb8d8-eb3f-4cf5-bf6e-29394957cac1
+langcode: da
 status: true
 dependencies:
   config:
     - field.storage.node.scheduled_update
-    - node.type.vih_short_course
+    - node.type.news
     - scheduled_updates.scheduled_update_type.content_publish_unpublish
     - scheduled_updates.scheduled_update_type.node_embargo
-id: node.vih_short_course.scheduled_update
+id: node.news.scheduled_update
 field_name: scheduled_update
 entity_type: node
-bundle: vih_short_course
+bundle: news
 label: 'Skemalagt opdatering'
 description: ''
 required: false
