--- a/config/sync/node.type.news.yml
+++ b/config/sync/node.type.news.yml
@@ -13,6 +13,6 @@ name: Nyhed
 type: news
 description: ''
 help: ''
-new_revision: true
+new_revision: false
 preview_mode: 0
 display_submitted: false
