--- a/config/sync/node.type.vih_course_period.yml
+++ b/config/sync/node.type.vih_course_period.yml
@@ -13,6 +13,6 @@ name: 'Langt kursus - periode'
 type: vih_course_period
 description: ''
 help: ''
-new_revision: true
-preview_mode: 1
+new_revision: false
+preview_mode: 0
 display_submitted: false
